signin api routes

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 Mongo = "mongodb+srv://Akash-Rai:Akash12@travelbuddy.r0gl1zm.mongodb.net/TravelBuddy?retryWrites=true&w=majority"
+jwt_SECRET = "QWERTYUIOP"
