--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-Mongo = "mongodb+srv://Akash-Rai:Akash12@travelbuddy.r0gl1zm.mongodb.net/TravelBuddy?retryWrites=true&w=majority"
+
+Mongo = "mongodb+srv://user12:user12@travelbuddy.r0gl1zm.mongodb.net/TravelBuddyretryWrites=true&w=majority"
 jwt_SECRET = "QWERTYUIOP"
