--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 
-Mongo = "mongodb+srv://user12:user12@travelbuddy.r0gl1zm.mongodb.net/TravelBuddyretryWrites=true&w=majority"
+Mongo = "mongodb+srv://Akash:Narmada%4012@mern-estate.yttgkf8.mongodb.net/Mern-estate?retryWrites=true&w=majority&appName=Mern-estate"
 jwt_SECRET = "QWERTYUIOP"
